.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ATDSA_bookshelf__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_GUID__c</fullName>
        <description>Created to house Contact GUID from Dynamics, not displayed on page layouts.</description>
        <label>Contact GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Photo__c</fullName>
        <label>Contact Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Principal/Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecommerce Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Parts/Fixed Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is a duplicate contact and it will be flagged for removal.</inlineHelpText>
        <label>Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormPos__Current_Position_Start__c</fullName>
        <description>Tracks the start date of a Contact&apos;s association with an Account for future use in the Former Position record when the Contact is re-associated with a different Account.</description>
        <label>Current Position Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_BU_Contact__c</fullName>
        <inlineHelpText>Select which BUs this person should be made the primary contact for.</inlineHelpText>
        <label>Primary Contact</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMENET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>describes the contact&apos;s role at the dealership</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Appraiser Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricer Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCM/UCD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <inlineHelpText>updated by workflow with the contact status is updated to Gone - shows No Longer with Dealership&quot;</inlineHelpText>
        <label>Status Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>shows the status of a contact at a dealership</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Duplicate_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Duplicate_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Duplicate Contacts</label>
        <sharedTo>
            <group>COE_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>contact_email_cannot_be_company_email</fullName>
        <active>true</active>
        <description>if the contact&apos;s email address contains one of the company email address domains, and it&apos;s not named AutoTrader or COE Dealer for Testing, and the account record type is not Third-Party or Partner, user cannot save the contact record</description>
        <errorConditionFormula>AND( 

AND( 
 Account.RecordTypeId &lt;&gt; &apos;012E00000005ynY&apos;, 
 Account.RecordTypeId &lt;&gt; &apos;012E000000057U2&apos;),

AND(
Account.Name &lt;&gt; &quot;AutoTrader&quot;, 
Account.Name &lt;&gt; &quot;COE Dealer for Testing&quot;  
),

OR( 
CONTAINS(Email,&apos;@aisrebates.com&apos;), 
CONTAINS(Email,&apos;@auctiongenius.com&apos;), 
CONTAINS(Email,&apos;@auctiongenius.net&apos;), 
CONTAINS(Email,&apos;@autotrader.com&apos;), 
CONTAINS(Email,&apos;@autotradergroup.com&apos;), 
CONTAINS(Email,&apos;@autotradergroup.mail.onmicrosoft.com&apos;), 
CONTAINS(Email,&apos;@buybooktech.com&apos;), 
CONTAINS(Email,&apos;@cdmdata.com&apos;), 
CONTAINS(Email,&apos;@coxautoinc.com&apos;), 
CONTAINS(Email,&apos;@dealsonwheels.com&apos;), 
CONTAINS(Email,&apos;@haystak.com&apos;), 
CONTAINS(Email,&apos;@homenetauto.com&apos;), 
CONTAINS(Email,&apos;@innovativedealertechnologies.com&apos;), 
CONTAINS(Email,&apos;@kbb.com&apos;), 
CONTAINS(Email,&apos;@makemydeal.com&apos;), 
CONTAINS(Email,&apos;@quickvalues.com&apos;), 
CONTAINS(Email,&apos;@vauto.com&apos;), 
CONTAINS(Email,&apos;@vinsolutions.com&apos;), 
CONTAINS(Email,&apos;@manheim.com&apos;), 
CONTAINS(Email,&apos;@manheimcloud.onmicrosoft.com&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Unable to save contact. Cox Automotive employees cannot be added as contacts in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>